Fixing text-wrapping animation bug in accordeon

--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,7 @@ nav {
 }
 
 .accordeon li p {
+	padding: 0 6em 0 0;
 	display: block;
 	height: 0;
 	font-size: 1.5em;
